<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#e8e8e8"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:textColor="@color/textcolor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_msg"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/tagline"
        android:textColor="@color/textcolor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tagline"
        android:layout_below="@id/welcome"
        android:layout_centerHorizontal="true" />
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tagline"
        android:text="@string/splash_btn"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:onClick="letsDance"
        android:background="@color/btn_bg"
        android:textColor="@android:color/white" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app_icon"
        android:src="@drawable/app_icon"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/welcome" />
</RelativeLayout>
