<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/offwhite"
    tools:context="com.example.fall15.eecs441.pico441.DanceChacha">

    <TextView
        android:id="@+id/chacha_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chacha"
        android:textColor="@color/textcolor"
        android:textSize="30sp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/time_sig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chacha_time_sig"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/chacha_header"
        android:textColor="@color/textcolor"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/step_type"
        android:textStyle="italic"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textcolor"
        android:layout_below="@id/time_sig"
        android:text="@string/chacha_basic" />

    <!--<Button-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/step_type"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:text="@string/tempo_btn"-->
        <!--android:id="@+id/button" />-->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/feet"
        android:src="@drawable/feet"
        android:layout_marginTop="40dp"
        android:adjustViewBounds="true"
        android:maxWidth="200dp"
        android:maxHeight="200dp"
        android:scaleType="fitCenter"
        android:layout_below="@+id/step_type"
        android:layout_centerHorizontal="true" />

    <!--<SeekBar-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/seekBar"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_below="@id/feet" />-->

    <!--<ToggleButton-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:text="Audio"-->
        <!--android:id="@+id/toggleAudio"-->
        <!--android:layout_below="@id/seekBar"-->
        <!--android:layout_centerHorizontal="true" />-->


</RelativeLayout>
